src/objects/CH_Attachment__c.object
<CustomObject>
    <description>This object is used for getting details of attachments through respective fields.</description>
    <fields>
        <fullName>AttachmentID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AttachmentID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Actual_Delete_Date__c</fullName>
        <description>Getting the Actual Delete Date from CAPS server</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual Delete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CH_Case_Number_for_CAPS__c</fullName>
        <description>This field is used for updating fields in the Caps System in Integration</description>
        <formula>Case__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Number for CAPS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Classification__c</fullName>
        <description>This Field is useful for getting type of Data.</description>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Service Provider End User Information</fullName>
                </value>
                <value>
                    <fullName>Other Sensitive Information</fullName>
                </value>
                <value>
                    <fullName>Other Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Description__c</fullName>
        <description>This field is useful for getting Description of respective Attachments.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Expected_Delete_Date__c</fullName>
        <description>Getting the value based on retention days</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Expected Delete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CH_FileType__c</fullName>
        <description>To know which file is scrambled or encrypted</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FileType</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_MarkForDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if it attachment is deleted then checking it as true</description>
        <label>MarkForDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_Migrated_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field should be visible only to Admins, and Data loader, Integration profiles. Should not be in layouts</description>
        <label>CH_Migrated_Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_NoSuchFileinCAPS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>We are generating two file(encrypted and scrambled) when classification is sensitive and encrypted file if non-sensitive. If no file was generated after polling CAPS json log for some defined period, set it to true.</description>
        <label>NoSuchFileinCAPS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_Portal_or_Email_to_Case__c</fullName>
        <description>To check whether the uploading be done by portal or email to case</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Puropse__c</fullName>
        <description>This Field gives Purpose of attaching.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Puropse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Service_Class__c</fullName>
        <description>This field is useful for getting type of Service Class.</description>
        <label>Service Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CARE</fullName>
                    <default>true</default>
                    <label>CARE</label>
                </value>
                <value>
                    <fullName>Internal R&amp;D</fullName>
                    <isActive>false</isActive>
                    <label>Internal R&amp;D</label>
                </value>
                <value>
                    <fullName>Managed Services</fullName>
                    <isActive>false</isActive>
                    <label>Managed Services</label>
                </value>
                <value>
                    <fullName>Network Implementation</fullName>
                    <isActive>false</isActive>
                    <label>Network Implementation</label>
                </value>
                <value>
                    <fullName>Network Planning And Optimization</fullName>
                    <isActive>false</isActive>
                    <label>Network Planning And Optimization</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Size__c</fullName>
        <description>This Field is useful for getting Size of attached files.</description>
        <label>Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_Status__c</fullName>
        <description>This field is used for getting Status of Attached files.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Uploading</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Encrypting</fullName>
                </value>
                <value>
                    <fullName>Scrambling</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Uploaded__c</fullName>
        <description>When file was uploaded into CAPS.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Uploaded</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To display the files that have been uploaded.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>CH_Attachment</relationshipLabel>
        <relationshipName>CH_Attachment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Visible to the Customer</description>
        <label>Customer Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <description>Store the name of the file along with extension(.JPG,.txt etc)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sensitive_Data__c</fullName>
        <description>Whether attachment/file is sensitive or not</description>
        <formula>IF(ISPICKVAL(CH_Classification__c, &apos;Service Provider End User Information&apos;) ||  ISPICKVAL(CH_Classification__c, &apos;Other Sensitive Information&apos;),true,IF( ISPICKVAL(CH_Classification__c, &apos;Other Information&apos;), false, false))</formula>
        <label>Sensitive Data?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uploaded__c</fullName>
        <description>This Field reflects the date the file has been uploaded.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Uploaded</label>
        <type>Date</type>
    </fields>
    <label>Attachment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AttachmentID__c</columns>
        <columns>Case__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Customer_Visible__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>File_Name__c</columns>
        <columns>CH_FileType__c</columns>
        <columns>CH_Size__c</columns>
        <columns>CH_Status__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>CH_Description__c</columns>
        <columns>CH_Case_Number_for_CAPS__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CH_Attachment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CH_Attachment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>