src/objects/CH_Attachment__c/validationRules/Closed_Completed_Case_Attachment.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Completed_Case_Attachment</fullName>
    <active>true</active>
    <description>Created as part of NOKIASC-31315</description>
    <errorConditionFormula>AND(
ISNEW(),!ISBLANK(Case__c),OR(ISPICKVAL(Case__r.Status, &apos;Closed&apos;), ISPICKVAL(Case__r.Status, &apos;Completed&apos;),
 ISPICKVAL(Case__r.Status, &apos;Cancelled&apos;)), $Profile.Name &lt;&gt; &apos;Data Loader Profile&apos;)</errorConditionFormula>
    <errorMessage>Attachments cannot be created on Closed, Completed or Cancelled cases.</errorMessage>
</ValidationRule>